# area

./: .gitignore  CMakeLists.txt  Makefile  README.md
assets/: in.txt
include/: area.h  array.h  function_parser.h  integral.h  myutility.h  print_tree.h  root.h  test.h  vector.h
include/expression/: derivative.h  node.h  parser.h  print_tree.h
include/function/: asm_listing.h  derivative.h  node.h  parser.h  print_tree.h  simplify.h
include/integral/: square_vec.h
include/root/: newton.h
old/: area.c  derivator.c  function_parser.c  main.c
src/: area.c  array.c  function_parser.c  integral.c  main.c  myutility.c  print_tree.c  root.c  test.c  vector.c
src/expression/: derivative.c  node.c  parser.c  print_tree.c
src/function/: asm_listing.c  derivative.c  node.c  parser.c  print_tree.c  simplify.c
src/integral/: simpson.c  square_vec.c
src/root/: newton.c
